V1.1.0a Wednesday, January 16 2013 
 Changes
 +Added Paste All on history item right-click.
 +Added Edit on history item right-click.
 +Fix Bug 3417225,Alt+c clear invoked when Ctrl+Alt+c is hotkey.
 +Fix Bug 2687052(re-introduced in rc7) that auto-deselects text in apps like LyX and DevHelp. 
  
V1.1.0 Wednesday, January 16 2013 
 Changes
 ***This is a major release.***
 +Added patch 3389976 - history menu crash, utf-8
 +Added UTF-8 checks on incomming text streams.
 +Changed history entries to structures (and history file format) to support
  upcoming features.
 +Added persistent history list and corresponding hot key.
 +Added right-click either history list with a Move To or cancel.
 +Added Save As for the history file - writes a text file out.
 +Major rewrite of cliboard handling. It is now very simple and eliminates a 
  lot of CPU overhead.
 +Fixed bug 3560995, mouse button events causing false searches.
 +Added appindicator so it appears in unity.
 +Completely re-wrote prefs sybsystem, so prefs are easier to add.
 +Fixed wide dialog, and quit instant activation.
 +Added current entry on to preference.
 +Added locking for clipboard updates.
 +Fixed lost clip entries when selecting existing history clip entries.
  
V1.0.2rc6 Wednesday, January 9 2013 
 Changes
 +Applied glib patch from bug 3518845
 +Applied 0 size Action file lockup from bug 3459123
 +Fixed arrow/home/page up keys messing up search-as-you-type.
 +Fixed having multiple copies of parcellite. Checks to see if already running.
 +Fixed double backspace on search-as-you-type.
 +Fixed command line copies to clipboard. Should work on all X sessions. Note: entry is not 
  immediately added to clipboard. There is a 1/2 sec delay.
 
V1.0.2rc5  Friday, September 9 2011 
 Changes
 +Fixed the primary deselect and file cut/paste issue.
 
v1.0.2rc4  Monday, September 5 2011
 Changes
 +Fix bugs introduced in clipboard code selection. Should fix primary deselect and file cut/paste issue.