@@ -3,7 +3,8 @@ V1.1.0a Wednesday, January 16 2013
  +Added Paste All on history item right-click.
  +Added Edit on history item right-click.
  +Fix Bug 3417225,Alt+c clear invoked when Ctrl+Alt+c is hotkey.
- +Fix Bug 2687052(re-introduced in rc7) that auto-deselects text in apps like LyX and DevHelp. 
+ +Fix Bug 2687052(re-introduced in rc7) that auto-deselects text in apps like LyX and DevHelp. SVN319 
+ +Added tooltip for Action/Command column headers.
   
 V1.1.0 Wednesday, January 16 2013 
  Changes
